Revert "Fixed tab bar stripe with z-index"
This reverts commit 3fc9d437bbfd1ec0526744cd2669f1e419c07b15.

--- a/stylesheets/command-toolbar.less
+++ b/stylesheets/command-toolbar.less
@@ -13,7 +13,6 @@
 }
 
 .workspace .command-toolbar {
-  z-index:100;
   font-size:  12px; 
   box-shadow: inset 0 -8px 8px -4px rgba(0, 0, 0, 0.15);
   .btn{
